deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cute-pics-api
spec:
  selector:
    app: cute-pics-api
  ports:
    - port: 80
      targetPort: 8080
