deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cute-pics-api
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: cute-pics-api.dcnick3.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cute-pics-api
                port:
                  number: 80
  tls:
    - hosts:
      - cute-pics-api.dcnick3.me
      secretName: cute-pics-api-ingress-secret
